# Humit_API

./: .coveragerc  .flake8  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  RESTRUCTURING.md  config.json  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_terminal_test.py  setup.py  setup_mac.py  test_voicemidi.py
.github/workflows/: ci.yml  python-test.yml
docs/: index.md
docs/api/: index.md
docs/user_guide/: installation.md  quickstart.md
tests/: __init__.py  conftest.py  run_terminal_test.py  run_tests.py  test_mic.py  test_midi.py  test_tone.py  test_voicemidi.py
voicemidi/: __init__.py  __main__.py  main.py
voicemidi/audio/: audio_input.py
voicemidi/backend/: __init__.py
voicemidi/backend/audio/: __init__.py  audio_input.py
voicemidi/backend/core/: __init__.py  cli.py  voicemidi.py
voicemidi/backend/midi/: __init__.py  midi_output.py
voicemidi/backend/onset/: __init__.py  onset_detector.py
voicemidi/backend/pitch/: __init__.py  pitch_detector.py
voicemidi/backend/utils/: __init__.py  config.py  logging_config.py
voicemidi/frontend/: README.md  index.html  main.js  package.json  preload.js
voicemidi/frontend/css/: keyboard.css  styles.css  visualizer.css
voicemidi/frontend/js/: app.js  calibration.js  keyboard.js  settings.js  ui.js  visualizer.js
voicemidi/midi/: midi_output.py
voicemidi/onset/: onset_detector.py
voicemidi/pitch/: pitch_detector.py
voicemidi/utils/: config.py  logger.py
