[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voicemidi"
version = "0.1.0"
description = "A real-time application that converts voice input to MIDI notes"
readme = "README.md"
authors = [
    {name = "Karim Elachkar"}
]
license = {text = "Proprietary"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
dependencies = [
    "numpy>=1.20.0",
    "sounddevice>=0.4.4",
    "aubio>=0.4.9",
    "librosa>=0.9.0",
    "mido>=1.2.10",
    "python-rtmidi>=1.4.9",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "PyQt5>=5.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/voicemidi"
"Bug Tracker" = "https://github.com/yourusername/voicemidi/issues"

[project.scripts]
voicemidi = "voicemidi.backend.core.cli:main"

[tool.setuptools]
packages = ["voicemidi", "tests"]

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]

[tool.flake8]
max-line-length = 100
exclude = [".git", "venv", "__pycache__", "build", "dist"]
ignore = ["E203", "W503", "E231"]
per-file-ignores = ["__init__.py:F401,F403"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=voicemidi --cov-report=term-missing"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
] 